# VRAG

./: .deepeval_telemtry.txt  .gitattributes  .gitignore  README.md  colpali.ipynb  colpali_indexing.py  colpali_pipeline.py  demo.ipynb  evaluation.ipynb  paddle.py  pyproject.toml  vanilla.ipynb  vanilla_indexing.py  vanilla_rag.csv
.byaldi/test/embeddings/: embeddings_0.pt
.results/FinQA/retrieval/colpali/: colpali_qrels.json
.results/FinQA/retrieval/hybrid/: colpali_voyage_minmax_qrels_0.50.json  colpali_voyage_minmax_qrels_0.55.json  colpali_voyage_minmax_qrels_0.60.json  colpali_voyage_minmax_qrels_0.65.json  colpali_voyage_minmax_qrels_0.70.json  colpali_voyage_minmax_qrels_0.75.json  colpali_voyage_minmax_qrels_0.80.json  colpali_voyage_rank_qrels_0.50.json  colpali_voyage_rank_qrels_0.55.json  colpali_voyage_rank_qrels_0.60.json  colpali_voyage_rank_qrels_0.65.json  colpali_voyage_rank_qrels_0.70.json  colpali_voyage_rank_qrels_0.75.json  colpali_voyage_rank_qrels_0.80.json  colpali_voyage_zscore_qrels_0.50.json  colpali_voyage_zscore_qrels_0.55.json  colpali_voyage_zscore_qrels_0.60.json  (+46 more)
BasePipelines/: __init__.py  colpali_indexing.py  colpali_pipeline.py  config.py  hybrid_generation.py  vanilla_indexing.py  vanilla_pipeline.py  voyage_indexing.py  voyage_pipeline.py
Evaluation/Generation/: FinanceBench_image_g_eval.csv  FinanceBench_image_simple_metrics.csv  FinanceBench_text_g_eval.csv  FinanceBench_text_simple_metrics.csv  Table_VQA_image_g_eval.csv  Table_VQA_image_simple_metrics.csv  Table_VQA_text_g_eval.csv  Table_VQA_text_simple_metrics.csv  evaluation.py  final_results.xlsx  multi_model_faithfullness.py  multi_model_ragas.py
Evaluation/Retrieval/: FinQA_retrieval_results.csv  FinanceBench_retrieval_results.csv  Table_VQA_retrieval_results.csv  evaluation.py
Fin-QA/: colpali_indexing.py  colpali_pipeline.py  hybrid_pipeline.py  test.py  vanilla_indexing.py  vanilla_missing_files.txt  vanilla_pipeline.py  voyage_indexing.py  voyage_pipeline.py
Fin-QA/results/: colpali.csv  colpali_qrels.json  hybrid_qrels.json  qrels.json  text_qrels.json  vanilla.csv  vanilla_qrels.json
FinQA/: colpali_indexing.py  colpali_pipeline.py  vanilla_indexing.py  vanilla_pipeline.py  voyage_indexing.py  voyage_pipeline.py
FinanceBench/: colpali_indexing.py  colpali_pipeline.py  doc_names.txt  hybrid_pipeline.py  vanilla_indexing.py  vanilla_ocr.py  vanilla_pipeline.py  voyage_indexing.py  voyage_pipeline.py
FinanceBench/results/: colpali.csv  vanilla_qrels.json
Generation/: Claude.py  Google.py  OpenRouter.py  Openai.py  Qwen.py  QwenLocal.py  __init__.py  generation.py  prompts.py
Table-VQA/: colpali_indexing.py  colpali_pipeline.py  hybrid_pipeline.py  vanilla_indexing.py  vanilla_ocr.py  vanilla_pipeline.py  voyage_indexing.py  voyage_pipeline.py
Table-VQA/results/: colpali.csv  colpali_qrels.json  hybrid_qrels.json  text_qrels.json  vanilla.csv  vanilla_qrels.json
Table_VQA/: colpali_indexing.py  colpali_pipeline.py  vanilla_indexing.py  vanilla_pipeline.py  voyage_indexing.py  voyage_pipeline.py
Tat-DQA/: colpali_indexing.py  hybrid_pipeline.py  vanilla_pipeline.py  voyage_indexing.py
results/: colpali.csv
(+229 files in other folders)
