[tool.poetry]
name = "ekuru_vrag"

version = "0.1.0"
description = "A RAG system utilizing the compari architecture for document analysis."
authors = ["Emre Kuru <emre.kuru@ozu.edu.tr>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
langchain = "^0.3.4"
chromadb = "^0.5.15"
datasets = "~3.0.0"
pydantic = "~2.9.2"
pytrec_eval = "~0.5"
openai = "^1.54.0"
byaldi = "^0.0.7"
voyageai = "^0.3.1"
deepeval = "^1.5.9"
ipywidgets = "^8.1.5"
pypdf2 = "^3.0.1"
pytesseract = "^0.3.13"
nest-asyncio = "^1.6.0"
boto3 = "^1.35.68"
langchain-experimental = "^0.3.3"
pymupdf = "^1.24.14"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.0"
pytest = "^8.1.0"
coverage = "^7.4.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true